syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.jdbc.proto";
option java_outer_classname = "ProtoInterfaceProto";
option objc_class_prefix = "PI";

package polypheny.protointerface;

// Functions provided by the proto interface
service ProtoInterface {
  rpc Connect(ConnectionRequest) returns (ConnectionReply) {}
  // get names of all available languages
  rpc GetAvailableLanguages(LanguageRequest) returns (AvailableLanguages) {}
  // prepare and execute 1..n statements with the provided values
  rpc ExecuteParameterizedStatements(ParameterizedStatementBatch) returns (QueryResult) {}
  // prepare a single statement
  rpc PrepareStatement(PreparedStatement) returns (QueryResult) {}
  // execute a previously prepared statement with the values provided
  rpc ExecutePreparedStatement(ValueMapBatch) returns (QueryResult) {}
}

message ConnectionRequest {
  int32 major_api_version = 1;
  int32 minor_api_version = 2;
  string client_uuid = 3;
  map<string, string> connection_properties = 4;
}

message ConnectionReply {
  bool is_compatible = 1;
  uint32 major_api_version = 2;
  uint32 minor_api_version = 3;
}

message LanguageRequest {}

message AvailableLanguages {
  repeated string language_names = 1;
}

message Value {

}

message ValueMap {
  map<string, Value> value_map = 1;
}

message ValueMapBatch {
  repeated ValueMap value_maps = 1;
}

message ParameterizedStatement {
  string statement_language_name = 1;
  string statement = 2;
  map<string, string> statement_properties = 3;
  ValueMapBatch value_map_batch = 4;
}

message ParameterizedStatementBatch {
  repeated ParameterizedStatement parameterized_statement = 1;
}

message PreparedStatement {
  string statement_language_name = 1;
  string statement = 2;
}

message QueryResult {
  oneof result {
    bool no_result = 1;
    Frame frame = 2;
    int64 row_count = 4;
  }
}

message Frame {

}
